@@ -5,18 +5,16 @@ import org.tinyradius.core.RadiusPacketException;
 import org.tinyradius.core.dictionary.DefaultDictionary;
 import org.tinyradius.core.dictionary.Dictionary;
 import org.tinyradius.core.packet.request.AccessRequest;
-import org.tinyradius.core.packet.request.AccessRequestPap;
-import org.tinyradius.core.packet.request.AccountingRequest;
 import org.tinyradius.core.packet.request.RadiusRequest;
+import org.tinyradius.core.packet.response.RadiusResponse;
 
 import java.io.Closeable;
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
-import static org.tinyradius.core.packet.PacketType.ACCESS_REQUEST;
-import static org.tinyradius.core.packet.PacketType.ACCOUNTING_REQUEST;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.tinyradius.core.packet.PacketType.*;
 
 class EndToEndTest {
 
@@ -34,28 +32,29 @@ class EndToEndTest {
 
     @Test
     void testAll() throws RadiusPacketException, IOException, InterruptedException {
-        final Closeable origin = startOrigin();
-        final Closeable proxy = startProxy();
+        String username = "user1";
+        String pw = "pw1";
+        Closeable origin = startOrigin(Map.of(username, pw));
+        Closeable proxy = startProxy();
 
-        final AccessRequestPap ar = (AccessRequestPap)
-                ((AccessRequest) RadiusRequest.create(dictionary, ACCESS_REQUEST, (byte) 1, null, Collections.emptyList()))
-                        .withPapPassword("myPassword")
-                        .addAttribute("User-Name", "myUser")
-                        .addAttribute("NAS-Identifier", "this.is.my.nas-identifier.de")
-                        .addAttribute("NAS-IP-Address", "192.168.0.100")
-                        .addAttribute("Service-Type", "Login-User");
+        RadiusRequest r1 = ((AccessRequest) RadiusRequest.create(dictionary, ACCESS_REQUEST, (byte) 1, null, List.of()))
+                .withPapPassword(pw)
+                .addAttribute("User-Name", username);
+
+        RadiusRequest r2 = RadiusRequest.create(dictionary, ACCOUNTING_REQUEST, (byte) 2, null, List.of())
+                .addAttribute("Acct-Status-Type", "1");
+
+        RadiusRequest r3 = ((AccessRequest) RadiusRequest.create(dictionary, ACCESS_REQUEST, (byte) 1, null, List.of()))
+                .withPapPassword("badPw")
+                .addAttribute("User-Name", username);
 
 
-        final AccountingRequest acc = (AccountingRequest) RadiusRequest.create(dictionary, ACCOUNTING_REQUEST, (byte) 2, null, new ArrayList<>())
-                .addAttribute("User-Name", "username")
-                .addAttribute("Acct-Status-Type", "1")
-                .addAttribute("Acct-Session-Id", "1234567890")
-                .addAttribute("NAS-Identifier", "this.is.my.nas-identifier.de")
-                .addAttribute("NAS-Port", "0");
+        List<RadiusResponse> responses = harness.testClient("localhost", PROXY_ACCESS_PORT, PROXY_ACCT_PORT, PROXY_SECRET,
+                List.of(r1, r2, r3));
 
-        harness.testClient("localhost", PROXY_ACCESS_PORT, PROXY_ACCT_PORT, PROXY_SECRET, List.of(ar, acc));
-
-        // TODO assert responses
+        assertEquals(responses.get(0).getType(), ACCESS_ACCEPT);
+        assertEquals(responses.get(1).getType(), ACCOUNTING_RESPONSE);
+        assertEquals(responses.get(2).getType(), ACCESS_REJECT);
 
         Thread.sleep(1000);
         origin.close();
@@ -71,7 +70,7 @@ class EndToEndTest {
 
     @Test
     void testOriginStartup() throws IOException, InterruptedException {
-        final Closeable origin = startOrigin();
+        final Closeable origin = startOrigin(Map.of());
         Thread.sleep(1000);
         origin.close();
     }
@@ -80,7 +79,7 @@ class EndToEndTest {
         return harness.startProxy(PROXY_ACCESS_PORT, PROXY_ACCT_PORT, PROXY_SECRET, ORIGIN_ACCESS_PORT, ORIGIN_ACCT_PORT, ORIGIN_SECRET);
     }
 
-    private Closeable startOrigin() {
-        return harness.startOrigin(ORIGIN_ACCESS_PORT, ORIGIN_ACCT_PORT, ORIGIN_SECRET);
+    private Closeable startOrigin(Map<String, String> credentials) {
+        return harness.startOrigin(ORIGIN_ACCESS_PORT, ORIGIN_ACCT_PORT, ORIGIN_SECRET, credentials);
     }
 }
